<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectivityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCellID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/cell_id"
            android:textColor="#000000"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/tvWifiSignal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/wifi_signal"
                android:textColor="#000000"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/ivWifiSignal"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_signal_wifi_0_bar_black_24dp" />

        </LinearLayout>

        <TextView
        android:id="@+id/tvRouterIpAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/ip_address"
        android:textColor="#000000"
        android:textSize="16dp" />

        <TextView
            android:id="@+id/tvRouterMacAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/mac_address"
            android:textColor="#000000"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnCellID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="get cell ID" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>