<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#E8E8E8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:text="Accelerometer" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/acc_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/x_axis" />


                <EditText
                    android:id="@+id/acc_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:background="#ffffff"
                    android:inputType="textPersonName"
                    android:text="@string/y_axis" />

                <EditText
                    android:id="@+id/acc_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:background="#ffffff"
                    android:inputType="textPersonName"
                    android:text="@string/z_axis" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:text="Magnetometer" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mag_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:background="#ffffff"
                    android:inputType="textPersonName"
                    android:text="@string/x_axis" />

                <EditText
                    android:id="@+id/mag_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:background="#ffffff"
                    android:inputType="textPersonName"
                    android:text="@string/y_axis" />

                <EditText
                    android:id="@+id/mag_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:background="#ffffff"
                    android:inputType="textPersonName"
                    android:text="@string/z_axis" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:text="Gyro" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/gyro_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:background="#ffffff"
                    android:inputType="textPersonName"
                    android:text="@string/x_axis" />

                <EditText
                    android:id="@+id/gyro_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:background="#ffffff"
                    android:inputType="textPersonName"
                    android:text="@string/y_axis" />

                <EditText
                    android:id="@+id/gyro_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:background="#ffffff"
                    android:inputType="textPersonName"
                    android:text="@string/z_axis" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#000000"
                android:layout_weight="0"
                android:text="Lumination" />

            <EditText
                android:id="@+id/light_lux"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="0"
                android:ems="10"
                android:background="#ffffff"
                android:inputType="textPersonName"
                android:text="@string/label_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_vertical"
            >

            <Button
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_weight="0"
                android:text="step " />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="#000000"
                    android:layout_weight="0"
                    android:text="Steps :" />

                <EditText
                    android:id="@+id/nmbrSteps"
                    android:layout_width="100dp"
                    android:layout_height="46dp"
                    android:layout_weight="0"
                    android:ems="10"
                    android:background="#ffffff"
                    android:inputType="textPersonName"
                    android:text="0"
                    android:textSize="30dp"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/label_proximity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:text="@string/label_proximity"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>