<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity"
    android:background="#E8E8E8">

    <LinearLayout
        android:id="@+id/testFather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_Acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Accelerometer"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:onClick="onCheckboxAcc"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/accLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/acc_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/x_axis" />


                <EditText
                    android:id="@+id/acc_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/y_axis" />

                <EditText
                    android:id="@+id/acc_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/z_axis" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_Magn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Magnetometer"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:onClick="onCheckboxMagn"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/magnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mag_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/x_axis" />

                <EditText
                    android:id="@+id/mag_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/y_axis" />

                <EditText
                    android:id="@+id/mag_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/z_axis" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_gyro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gyroscope"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:onClick="onCheckboxGyro"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/gyroLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/gyro_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/x_axis" />

                <EditText
                    android:id="@+id/gyro_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/y_axis" />

                <EditText
                    android:id="@+id/gyro_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/z_axis" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="you were : "
                android:textColor="#000000"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/id_behavior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text=""
                android:textColor="#ff547f"
                android:textSize="24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStartColl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="Start Collect" />

            <Button
                android:id="@+id/btnTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="Test" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/meanLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/accMeanField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/accMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="mean Acce"
                        android:textColor="#000000"
                        android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/x_accMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/x_axis" />


                    <EditText
                        android:id="@+id/y_accMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/y_axis" />

                    <EditText
                        android:id="@+id/z_accMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/z_axis" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/magnMeanField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/magnMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="mean Magne"
                        android:textColor="#000000"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/x_magMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/x_axis" />

                    <EditText
                        android:id="@+id/y_magMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/y_axis" />

                    <EditText
                        android:id="@+id/z_magMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/z_axis" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/gyroMeanField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/gyroMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="mean gyro"
                        android:textColor="#000000"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/x_gyroMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/x_axis" />

                    <EditText
                        android:id="@+id/y_gyroMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/y_axis" />

                    <EditText
                        android:id="@+id/z_gyroMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/z_axis" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>